feat: improve csv and styling

--- a/cv/index.html
+++ b/cv/index.html
@@ -14,8 +14,8 @@
 
         <div class="info-block">
           <div><strong>Languages:</strong> Spanish (native), English (professional)</div>
-          <div><strong>Location:</strong>Colima, Mexico</div>
-          <div><strong>Education:</strong>Systems Engineering bachelor's degree</div>
+          <div><strong>Location:</strong> Colima, Mexico</div>
+          <div><strong>Education:</strong> Systems Engineering bachelor's degree</div>
           <div><strong>Availability:</strong> Remote / Hybrid</div>
         </div>
       </div>
@@ -32,11 +32,10 @@
     <section>
       <h2>Professional Summary</h2>
       <p>
-      Senior Software Engineer with 10+ years of experience building, scaling, and modernizing
-      Ruby on Rails applications. Strong background in backend architecture, performance optimization,
-      AWS, system reliability, and upgrading legacy systems. Known for improving engineering quality,
-      refining CI pipelines, reducing operational issues, and mentoring developers. Delivers maintainable,
-      scalable solutions in fast-paced environments.
+        Senior Ruby on Rails Engineer with 12+ years of experience architecting, scaling, and modernizing backend systems across high-growth SaaS, fintech, and communications platforms. 
+        Deep expertise in distributed systems, service decomposition, performance optimization, and upgrading legacy codebases. 
+        Known for reducing operational bottlenecks, improving system reliability, enforcing engineering standards, mentoring teams, and delivering stable, well-tested software. 
+        Strong collaborator with experience building multi-service platforms, CI/CD automation, and developer tooling in fast-paced product environments.
       </p>
     </section>
 
@@ -56,47 +55,52 @@
 
       <div class="job">
         <h3>
-          Technical Lead — SchoolStatus
+          Technical Lead — SchoolStatus 
+          <span class="industry-tag">(EdTech · K-12 Communications)</span>
           <span class="date">2023–Present</span>
         </h3>
+
         <ul>
-          <li>Built a new internal Rails API and dashboard for SMS and call delivery using Twilio and Bandwidth.</li>
-          <li>Implemented Kafka-based message queues to improve reliability and scalability.</li>
-          <li>Upgraded a legacy Rails app and connected it to the new Kafka messaging system.</li>
-          <li>Improved SMS deliveries from 1200 per minute to 20,000.</li>
-          <li>Increased code coverage of legacy codebase from 0% to 75%.</li>
-          <li> Created a complete docker setup that mimics our production environment and connections across multiple services and apps.</li>
-          <li>Kept coverage of new apps at 90% by building CI reviews and git hooks to detect code without tests.</li>
-          <li>Automated Github releases and Changelog generation based on conventional commits.</li>
-          <li>Created dashboards to manage Twilio profiles for districts and automated the registration process.</li>
-          <li>Built internal ETL tools using Nest.js and React Router to handle DB, SFTP and CSV data.</li>
+          <li>Led the design and evolution of a multi-channel communication platform (SMS, voice) used by thousands of teachers and parents; built with Kafka, Rails, and distributed services.</li>
+          <li>Scaled SMS throughput from <strong>1,200/min → 20,000/min</strong> via Kafka pipelines and optimized fan-out strategies.</li>
+          <li>Upgraded a critical legacy Rails system and integrated it into the new Kafka architecture.</li>
+          <li>Reduced onboarding from days to hours by automating A2P 10DLC, campaign registration, and Twilio/Bandwidth workflows.</li>
+          <li>Built a Nest.js data ingestion pipeline (DB, SFTP, CSV) syncing district staff across products.</li>
+          <li>Created a production-like Docker environment simulating service communication and Kafka brokers.</li>
+          <li>Raised legacy coverage from <strong>0% → 75%</strong> and enforced <strong>90%+</strong> coverage on new services.</li>
+          <li>Automated GitHub releases and changelogs through conventional commits.</li>
+          <li>Developed dashboards and tools to manage Twilio/Bandwidth profiles at district scale.</li>
         </ul>
       </div>
 
       <div class="job">
         <h3>
-          Senior Software Engineer — Donorbox
+          Senior Software Engineer — Donorbox 
+          <span class="industry-tag">(Nonprofit · Donations · Payments)</span>
           <span class="date">2022–2023</span>
         </h3>
+
         <ul>
-          <li>Built a donation widget for phones/tablets/browsers using pure Javascript web components.</li>
-          <li>Integrated Stripe and PayPal for secure payment flows based on countries and currencies.</li>
-          <li>Improved test suite using Minitest and Cuprite to deal with false positives.</li>
+          <li>Developed a cross-device donation widget using Web Components and vanilla JavaScript.</li>
+          <li>Integrated Stripe and PayPal with currency- and country-aware routing.</li>
+          <li>Replaced flaky system tests with Cuprite and strengthened the backend test suite.</li>
         </ul>
       </div>
 
       <div class="job">
         <h3>
-          Senior Software Engineer — Stadium Goods
+          Senior Software Engineer — Stadium Goods 
+          <span class="industry-tag">(E-commerce · Marketplace)</span>
           <span class="date">2021–2022</span>
         </h3>
+
         <ul>
-          <li>Implemented ElasticSearch across high-traffic areas, improving query performance.</li>
-          <li>Designed and shipped the company’s first Rails Engine for cleaner domain boundaries.</li>
-          <li>Built a custom ETL pipeline for order synchronization, improving data reliability.</li>
-          <li>Migrated from Webpacker to Importmaps, reducing build times and CI complexity.</li>
-          <li>Improved GitLab CI pipelines by removing redundant test runs.</li>
-          <li>Delivered real-time features using Hotwire and ActionCable.</li>
+          <li>Implemented ElasticSearch for high-traffic search and catalog flows, reducing DB load.</li>
+          <li>Shipped the company’s first Rails Engine to establish clean domain boundaries.</li>
+          <li>Built an ETL pipeline for third-party order synchronization, improving data reliability.</li>
+          <li>Migrated Webpacker → Importmaps, simplifying builds and deployments.</li>
+          <li>Improved GitLab CI by removing redundant tests and increasing parallelization.</li>
+          <li>Built real-time features using Hotwire and ActionCable.</li>
         </ul>
       </div>
 
@@ -105,28 +109,39 @@
           Senior Ruby on Rails Engineer — Michelada.io
           <span class="date">2019–2021</span>
         </h3>
+
         <ul>
-          <li>Developed features across multiple agile client projects.</li>
-          <li>Improved legacy codebases through refactoring and updated testing practices.</li>
-          <li>Strengthened CI pipelines and reliability across several products.</li>
+          <li>Delivered features and improved systems across multiple client products.</li>
+          <li>Refactored legacy systems and modernized Rails versions and frontend tooling.</li>
+          <li>Enhanced CI reliability and introduced consistent engineering standards.</li>
         </ul>
 
         <div class="subjob">
-          <h4>Client Project: Curacubby <span class="date">2020–2021</span></h4>
+          <h4>
+            Client Project: Curacubby 
+            <span class="industry-tag">(EdTech · Billing)</span>
+            <span class="date">2020–2021</span>
+          </h4>
+
           <ul>
-            <li>Raised test coverage from 60% to 86%, significantly reducing regressions.</li>
-            <li>Upgraded the platform from Rails 4 to Rails 6.</li>
-            <li>Introduced parallel testing, static analysis, and accelerated CI feedback loops.</li>
-            <li>Developed internal dashboards and modular components.</li>
+            <li>Increased test coverage from 60% → 86% across billing and enrollment systems.</li>
+            <li>Upgraded Rails 4 → Rails 6 and improved performance and tooling.</li>
+            <li>Added parallel tests, static analysis, and CI optimizations.</li>
+            <li>Built dashboards and modular Rails Engines.</li>
           </ul>
         </div>
 
         <div class="subjob">
-          <h4>Client Project: Kueski <span class="date">2019–2020</span></h4>
+          <h4>
+            Client Project: Kueski 
+            <span class="industry-tag">(Fintech · Fraud Detection)</span>
+            <span class="date">2019–2020</span>
+          </h4>
+
           <ul>
-            <li>Built a risk-scoring microservice that improved fraud detection accuracy.</li>
-            <li>Integrated the scoring service with core apps through well-defined API contracts.</li>
-            <li>Improved documentation and internal coding standards.</li>
+            <li>Built a risk-scoring microservice improving fraud detection accuracy.</li>
+            <li>Integrated scoring with core apps using strong API contracts.</li>
+            <li>Improved documentation and engineering standards.</li>
           </ul>
         </div>
       </div>
@@ -136,34 +151,43 @@
           Ruby on Rails Engineer — Tangosource
           <span class="date">2013–2019</span>
         </h3>
+
         <ul>
-          <li>Promoted from Junior to Senior Developer; led multiple client projects across the company.</li>
-          <li>Modernized legacy systems, improved architecture, and established engineering standards.</li>
-          <li>Created deployment pipelines, monitoring strategies, and performance improvements.</li>
+          <li>Promoted from Junior → Senior; led multiple client projects.</li>
+          <li>Modernized architecture and introduced engineering standards.</li>
+          <li>Built CI/CD pipelines, monitoring tools, and performance improvements.</li>
         </ul>
 
         <div class="subjob">
-          <h4>Client Project: Prepaid2Cash <span class="date">2017–2019</span></h4>
+          <h4>
+            Client Project: Prepaid2Cash 
+            <span class="industry-tag">(Fintech · Prepaid Cards)</span>
+            <span class="date">2017–2019</span>
+          </h4>
+
           <ul>
-            <li>Led backend development and daily engineering workflow for a high-transaction fintech platform.</li>
-            <li>Integrated Sift Science for fraud detection, reducing false positives and improving risk modeling.</li>
-            <li>Designed and implemented new features across the platform while reducing technical debt.</li>
-            <li>Collaborated with cross-functional teams to plan roadmap improvements and optimize operations.</li>
+            <li>Led backend development for a prepaid card processing platform.</li>
+            <li>Integrated Sift for fraud detection, reducing false positives.</li>
+            <li>Built features while reducing technical debt.</li>
+            <li>Collaborated with cross-functional teams to improve workflows.</li>
           </ul>
         </div>
 
         <div class="subjob">
-          <h4>Client Project: Orbridge <span class="date">2013–2017</span></h4>
+          <h4>
+            Client Project: Orbridge 
+            <span class="industry-tag">(EdTech · Student Travel)</span>
+            <span class="date">2013–2017</span>
+          </h4>
+
           <ul>
-            <li>Migrated the platform from Rails 3 to Rails 4, significantly improving stability and maintainability.</li>
-            <li>Moved infrastructure from Rackspace to AWS, improving reliability and scalability.</li>
-            <li>Implemented monitoring, structured logging, and automated backups for production systems.</li>
-            <li>Created architecture diagrams, documentation, and engineering guidelines used by multiple teams.</li>
+            <li>Migrated Rails 3 → Rails 4, improving performance and stability.</li>
+            <li>Moved infrastructure from Rackspace → AWS.</li>
+            <li>Implemented monitoring, logging, and automated backups.</li>
+            <li>Produced documentation and architectural guidelines for teams.</li>
           </ul>
         </div>
-
       </div>
-
     </section>
 
   </body>
