chore: some tweaks and bolder texts

--- a/cv/index.html
+++ b/cv/index.html
@@ -41,13 +41,13 @@
 
     <section>
       <h2>Technical Skills</h2>
-      <p><strong>Backend:</strong> Ruby, Ruby on Rails, Sinatra, REST APIs, Microservices, Nest, Kafka, SQS, Redis</p>
-      <p><strong>Frontend:</strong> JavaScript, React, Hotwire, Turbo, Stimulus, Tailwind, HTML, HAML, CSS, SASS</p>
+      <p><strong>Backend:</strong> Ruby, <strong>Ruby on Rails</strong>, Sinatra, REST APIs, Microservices, Nest, Kafka, SQS, Redis</p>
+      <p><strong>Frontend:</strong> <strong>JavaScript</strong>, React, Hotwire, Turbo, Stimulus, Tailwind, HTML, HAML, CSS, SASS</p>
       <p><strong>Testing:</strong> RSpec, Minitest, Capybara, TDD/BDD, Static Analysis</p>
-      <p><strong>Databases:</strong> PostgreSQL, MySQL, DynamoDB, ElasticSearch</p>
-      <p><strong>DevOps:</strong> AWS, Docker, CI/CD (GitLab CI), Heroku, NGINX</p>
-      <p><strong>Architecture:</strong> Domain Driven Design, Layers, Rails Engines, Packwerk, Performance Profiling</p>
-      <p><strong>Tools:</strong> Git, Vim, Tmux, Observability & Monitoring</p>
+      <p><strong>Databases:</strong> <strong>PostgreSQL</strong>, MySQL, DynamoDB, ElasticSearch</p>
+      <p><strong>DevOps:</strong> AWS, <strong>Docker</strong>, CI/CD (GitLab CI), Heroku, NGINX</p>
+      <p><strong>Architecture:</strong> Domain Driven Design, Layered Architecture, Rails Engines, Packwerk, Performance Profiling</p>
+      <p><strong>Tools:</strong> <strong>Git</strong>, Vim, Tmux, Observability & Monitoring</p>
     </section>
 
     <section>
@@ -62,12 +62,12 @@
 
         <ul>
           <li>Led the design and evolution of a multi-channel communication platform (SMS, voice) used by thousands of teachers and parents; built with Kafka, Rails, and distributed services.</li>
-          <li>Scaled SMS throughput from <strong>1,200/min → 20,000/min</strong> via Kafka pipelines and optimized fan-out strategies.</li>
+          <li>Scaled SMS throughput from <strong>1,200/min → 20,000/min</strong> via Kafka queues and Karafka gem.</li>
           <li>Upgraded a critical legacy Rails system and integrated it into the new Kafka architecture.</li>
-          <li>Reduced onboarding from days to hours by automating A2P 10DLC, campaign registration, and Twilio/Bandwidth workflows.</li>
+          <li>Reduced onboarding from days to hours by automating A2P 10DLC, campaign registration, and Twilio/Bandwidth workflows using Rails.</li>
           <li>Built a Nest.js data ingestion pipeline (DB, SFTP, CSV) syncing district staff across products.</li>
           <li>Created a production-like Docker environment simulating service communication and Kafka brokers.</li>
-          <li>Raised legacy coverage from <strong>0% → 75%</strong> and enforced <strong>90%+</strong> coverage on new services.</li>
+          <li>Raised legacy coverage from <strong>0% → 75%</strong> and enforced <strong>90%+</strong> coverage on new Rails services.</li>
           <li>Automated GitHub releases and changelogs through conventional commits.</li>
           <li>Developed dashboards and tools to manage Twilio/Bandwidth profiles at district scale.</li>
         </ul>
@@ -83,7 +83,7 @@
         <ul>
           <li>Developed a cross-device donation widget using Web Components and vanilla JavaScript.</li>
           <li>Integrated Stripe and PayPal with currency- and country-aware routing.</li>
-          <li>Replaced flaky system tests with Cuprite and strengthened the backend test suite.</li>
+          <li>Replaced flaky system tests with Cuprite and strengthened the backend test suite for the Rails API.</li>
         </ul>
       </div>
 
@@ -95,12 +95,12 @@
         </h3>
 
         <ul>
-          <li>Implemented ElasticSearch for high-traffic search and catalog flows, reducing DB load.</li>
+          <li>Implemented ElasticSearch for high-traffic search and catalog flows, reducing DB load in the Rails API.</li>
           <li>Shipped the company’s first Rails Engine to establish clean domain boundaries.</li>
           <li>Built an ETL pipeline for third-party order synchronization, improving data reliability.</li>
           <li>Migrated Webpacker → Importmaps, simplifying builds and deployments.</li>
           <li>Improved GitLab CI by removing redundant tests and increasing parallelization.</li>
-          <li>Built real-time features using Hotwire and ActionCable.</li>
+          <li>Built real-time features using Rails features like Hotwire and ActionCable.</li>
         </ul>
       </div>
 
@@ -149,12 +149,12 @@
       <div class="job">
         <h3>
           Ruby on Rails Engineer — Tangosource
-          <span class="date">2013–2019</span>
+          <span class="date">2013–2018</span>
         </h3>
 
         <ul>
-          <li>Promoted from Junior → Senior; led multiple client projects.</li>
-          <li>Modernized architecture and introduced engineering standards.</li>
+          <li>Promoted from Junior → Mid → Senior; led multiple client projects.</li>
+          <li>Modernized architecture and introduced engineering standards for Rails.</li>
           <li>Built CI/CD pipelines, monitoring tools, and performance improvements.</li>
         </ul>
 
@@ -177,7 +177,7 @@
           <h4>
             Client Project: Orbridge 
             <span class="industry-tag">(EdTech · Student Travel)</span>
-            <span class="date">2013–2017</span>
+            <span class="date">2013–2016</span>
           </h4>
 
           <ul>
